--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,12 @@
 	"dependencies": {
 		"@koa/cors": "^3.4.1",
 		"@koa/router": "^12.0.0",
+		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
 		"isomorphic-fetch": "^3.0.0",
 		"koa": "^2.13.4",
-		"koa-body": "^5.0.0"
+		"koa-body": "^5.0.0",
+		"mongodb": "^4.10.0",
+		"mongoose": "^6.6.5"
 	}
 }
