--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 		"isomorphic-fetch": "^3.0.0",
 		"koa": "^2.13.4",
 		"koa-body": "^5.0.0",
+		"koa-session": "^6.2.0",
 		"mongodb": "^4.10.0",
 		"mongoose": "^6.6.5"
 	}
