--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "eslint": "8.25.0",
