--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-charts": "^4.0.0",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
