--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/websocket": "^1.0.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
