--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,11 @@
 	"dependencies": {
 		"@koa/cors": "^3.4.1",
 		"@koa/router": "^12.0.0",
+		"@types/bcrypt": "^5.0.0",
+		"@types/koa": "^2.13.5",
+		"@types/koa__cors": "^3.3.0",
+		"@types/koa__router": "^12.0.0",
+		"@types/koa-websocket": "^5.0.7",
 		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
 		"isomorphic-fetch": "^3.0.0",
