--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,8 @@
 	"version": "0.1.0",
 	"main": "server.js",
 	"dependencies": {
-		"@koa/cors": "^3.4.1",
-		"@koa/router": "^12.0.0",
 		"@types/bcrypt": "^5.0.0",
-		"@types/koa": "^2.13.5",
+		"@types/isomorphic-fetch": "^0.0.36",
 		"@types/koa__cors": "^3.3.0",
 		"@types/koa__router": "^12.0.0",
 		"@types/koa-websocket": "^5.0.7",
@@ -15,6 +13,8 @@
 		"isomorphic-fetch": "^3.0.0",
 		"koa": "^2.13.4",
 		"koa-body": "^5.0.0",
+		"koa-cors": "^0.0.16",
+		"koa-router": "^12.0.0",
 		"koa-session": "^6.2.0",
 		"koa-websocket": "^7.0.0",
 		"mongodb": "^4.10.0",
