--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"main": "server.js",
 	"dependencies": {
+		"@koa/cors": "^4.0.0",
+		"@koa/router": "^12.0.0",
 		"@types/bcrypt": "^5.0.0",
 		"@types/isomorphic-fetch": "^0.0.36",
 		"@types/koa__cors": "^3.3.0",
@@ -13,8 +15,6 @@
 		"isomorphic-fetch": "^3.0.0",
 		"koa": "^2.13.4",
 		"koa-body": "^5.0.0",
-		"koa-cors": "^0.0.16",
-		"koa-router": "^12.0.0",
 		"koa-session": "^6.2.0",
 		"koa-websocket": "^7.0.0",
 		"mongodb": "^4.10.0",
